--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <!-- footer -->
     <footer>
-      <h2> Made with love by Thecompiledriver!</h2>
+      <h2>❤️ Made with love by Thecompiledriver!</h2>
     </footer>
 
 
